nodejs jade jsajax提交 mvc搞定一半

--- a/views/index.jade
+++ b/views/index.jade
@@ -8,3 +8,11 @@ block content
   input#name
   br
   input#age
+  br
+  input(type="submit")#submit
+
+  
+  script(src="/javascripts/jquery.js")
+  script(src="/javascripts/index.js")
+
+
